[package]
name = "client"
version = "0.1.0"
authors = ["goofyblci"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arti-client = { version = "0.14.0", features = [
    "onion-service-client",
    "tokio",
] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = "0.3.1"
ipgeolocate = "0.3.5"
dotenv = "0.15.0"

[dependencies.tor-proto]
features = ["experimental-api"]
